[package]
name = "olarm_mqtt_bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = { version = "0.24.0", features = ["websocket"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
anyhow = "1.0.99"
dashmap = "6.1.0"
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
moka = { version = "0.12.10", features = ["future"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
toml = "0.9.5"